--- a/android/android-screensharing-annotations/annotations-acc-pack/src/main/res/layout/annotations_toolbar.xml
+++ b/android/android-screensharing-annotations/annotations-acc-pack/src/main/res/layout/annotations_toolbar.xml
@@ -1,60 +1,178 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="50dp"
-    android:background="@color/toolbar_bckg">
+    android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/annotations_tool"
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:isScrollContainer="true"
+        android:background="@color/toolbar_bckg"
+        android:visibility="gone">
+    <LinearLayout
+        android:id="@+id/color_toolbar"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_gravity="right"
-        android:gravity="center_vertical"
-        android:text="@string/annotations_tool"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"/>
+        android:layout_height="50dp"
+        android:orientation="horizontal"
+        android:background="@color/toolbar_bckg"
+        android:gravity="center_horizontal"
+        android:visibility="gone"
+        android:layout_gravity="center_vertical">
+        <ImageButton
+            android:id="@+id/picker_blue"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_gravity="center_vertical"
+            android:src="@drawable/color_picker"
+            android:background="@null"
+            android:layout_marginRight="10dp"
+            android:layout_marginLeft="10dp"
+            android:tint="@color/picker_color_blue"
+            android:clickable="true" />
+        <ImageButton
+            android:id="@+id/picker_purple"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_gravity="center_vertical"
+            android:src="@drawable/color_picker"
+            android:background="@null"
+            android:layout_marginRight="10dp"
+            android:layout_marginLeft="10dp"
+            android:tint="@color/picker_color_purple"
+            android:clickable="true"/>
+        <ImageButton
+            android:id="@+id/picker_red"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_gravity="center_vertical"
+            android:src="@drawable/color_picker"
+            android:background="@null"
+            android:layout_marginRight="10dp"
+            android:layout_marginLeft="10dp"
+            android:tint="@color/picker_color_red"
+            android:clickable="true" />
+        <ImageButton
+            android:id="@+id/picker_orange"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_gravity="center_vertical"
+            android:src="@drawable/color_picker"
+            android:background="@null"
+            android:layout_marginRight="10dp"
+            android:layout_marginLeft="10dp"
+            android:tint="@color/picker_color_orange"
+            android:clickable="true" />
+        <ImageButton
+            android:id="@+id/picker_yellow"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_gravity="center_vertical"
+            android:src="@drawable/color_picker"
+            android:background="@null"
+            android:layout_marginRight="10dp"
+            android:layout_marginLeft="10dp"
+            android:tint="@color/picker_color_yellow"
+            android:clickable="true"/>
+        <ImageButton
+            android:id="@+id/picker_green"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_gravity="center_vertical"
+            android:src="@drawable/color_picker"
+            android:background="@null"
+            android:layout_marginRight="10dp"
+            android:layout_marginLeft="10dp"
+            android:tint="@color/picker_color_green"
+            android:clickable="true"/>
+        <ImageButton
+            android:id="@+id/picker_black"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_gravity="center_vertical"
+            android:src="@drawable/color_picker"
+            android:background="@null"
+            android:layout_marginRight="10dp"
+            android:layout_marginLeft="10dp"
+            android:tint="@color/picker_color_black"
+            android:clickable="true"/>
+        <ImageButton
+            android:id="@+id/picker_gray"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_gravity="center_vertical"
+            android:src="@drawable/color_picker"
+            android:background="@null"
+            android:layout_marginRight="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="1dp"
+            android:tint="@color/picker_color_gray"
+            android:clickable="true"/>
+        <ImageButton
+            android:id="@+id/picker_white"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_gravity="center_vertical"
+            android:src="@drawable/color_picker"
+            android:background="@null"
+            android:layout_marginRight="10dp"
+            android:layout_marginLeft="10dp"
+            android:tint="@color/picker_color_white"
+            android:clickable="true"/>
+    </LinearLayout>
+    </ScrollView>
 
-    <TextView
-        android:id="@+id/done"
-        android:layout_width="50dp"
-        android:layout_height="match_parent"
-        android:gravity="center_vertical"
-        android:textAlignment="center"
-        android:text="@string/done_btn"
-        android:background="@color/done_btn"
-        android:clickable="true" />
+    <LinearLayout
+        android:id="@+id/main_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@color/toolbar_bckg">
+        <TextView
+            android:id="@+id/done"
+            android:layout_width="50dp"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
+            android:textAlignment="center"
+            android:text="@string/done_btn"
+            android:background="@color/done_btn"
+            android:clickable="true" />
 
-    <ImageButton
-        android:id="@+id/draw_freehand"
-        android:layout_width="50dp"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_pencil"
-        android:layout_gravity="center_vertical"
-        android:background="@null"/>
+        <ImageButton
+            android:id="@+id/draw_freehand"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_pencil"
+            android:layout_gravity="center_vertical"
+            android:background="@null"/>
 
-    <ImageButton
-        android:id="@+id/picker_color"
-        android:layout_width="50dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:src="@drawable/ic_color_picker"
-        android:background="@null"/>
+        <ImageButton
+            android:id="@+id/picker_color"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_gravity="center_vertical"
+            android:src="@drawable/color_picker"
+            android:layout_marginRight="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="1dp"
+            android:background="@null"
+            android:tint="@color/picker_color_orange"/>
 
-    <ImageButton
-        android:id="@+id/type_tool"
-        android:layout_width="50dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:src="@drawable/ic_type_tool"
-        android:background="@null"/>
+        <ImageButton
+            android:id="@+id/type_tool"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:src="@drawable/ic_type_tool"
+            android:background="@null"/>
 
-    <ImageButton
-        android:id="@+id/erase"
-        android:layout_width="50dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:src="@drawable/ic_erase"
-        android:background="@null"/>
+        <ImageButton
+            android:id="@+id/erase"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:src="@drawable/ic_erase"
+            android:background="@null"/>
+
+    </LinearLayout>
 
 </LinearLayout>
