--- a/android/android-screensharing-annotations/screensharing-acc-pack/src/main/res/values/colors.xml
+++ b/android/android-screensharing-annotations/screensharing-acc-pack/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="screensharing_bar">#7ed30d</color>
+    <color name="screensharing_bar">#57ACBD</color>
     <color name="gradientStart">#5B5B5B</color>
     <color name="gradientEnd">#393939</color>
     <color name="Orange">#FF8C00</color>
